Fixed .wp-block-info Y margin

--- a/src/gutenberg.scss
+++ b/src/gutenberg.scss
@@ -59,7 +59,7 @@
     }
 
     .wp-block-info {
-        @apply py-6 px-8 rounded-2xl border shadow-xl;
+        @apply py-6 px-8 rounded-2xl border shadow-lg my-12;
     }
 
     .wp-block-pullquote {
