Added underline to links in #content

--- a/src/gutenberg.scss
+++ b/src/gutenberg.scss
@@ -58,6 +58,10 @@
         @apply kbd kbd-sm;
     }
 
+    a {
+        @apply underline;
+    }
+
     .wp-block-info {
         @apply py-6 px-8 rounded-2xl border shadow-lg my-12;
     }
