--- a/src/gutenberg.scss
+++ b/src/gutenberg.scss
@@ -257,7 +257,7 @@
 
     figcaption {
         &.wp-element-caption {
-            @apply text-base text-gray-400 italic mt-4 text-center;
+            @apply text-base text-gray-400 mt-4 text-center;
         }
     }
 
