Fixed ol and ul list in content

--- a/src/gutenberg.scss
+++ b/src/gutenberg.scss
@@ -21,6 +21,14 @@
         }
     }
 
+    ul {
+        @apply list-disc pl-6;
+    }
+
+    ol {
+        @apply list-decimal pl-6;
+    }
+
     h1,
     h2,
     h3,
