--- a/src/gutenberg.scss
+++ b/src/gutenberg.scss
@@ -39,27 +39,27 @@
     }
 
     h1 {
-        @apply text-6xl;
-    }
-
-    h2 {
         @apply text-5xl;
     }
 
-    h3 {
+    h2 {
         @apply text-4xl;
     }
 
-    h4 {
+    h3 {
         @apply text-3xl;
     }
 
-    h5 {
+    h4 {
         @apply text-2xl;
     }
 
-    h6 {
+    h5 {
         @apply text-xl;
+    }
+
+    h6 {
+        @apply text-lg;
     }
 
     kbd {
