Added gray background

--- a/src/gutenberg.scss
+++ b/src/gutenberg.scss
@@ -71,7 +71,7 @@
     }
 
     .wp-block-info {
-        @apply py-6 px-8 rounded-2xl border shadow-lg my-12;
+        @apply py-6 px-8 rounded-2xl border shadow-lg my-12 bg-white;
     }
 
     .wp-block-pullquote {
