--- a/src/app.scss
+++ b/src/app.scss
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+    height: 100%;
+    min-height: 100vh;
+    @apply bg-gray-100;
+}
+
 .container {
     @apply mx-auto max-w-6xl relative my-12 px-4;
 }
