--- a/src/gutenberg.scss
+++ b/src/gutenberg.scss
@@ -174,6 +174,12 @@
         img {
             @apply rounded-xl;
         }
+
+        .aligncenter {
+            img {
+                @apply mx-auto;
+            }
+        }
     }
 
     .wp-block-cover {
